finally gets the wm link right

--- a/src/files/Web.config
+++ b/src/files/Web.config
@@ -38,6 +38,7 @@
   <location path="winter"><system.webServer><httpRedirect enabled="true" destination="/greater-manchester" httpResponseStatus="Permanent" /></system.webServer></location>
   <location path="gm"><system.webServer><httpRedirect enabled="true" destination="/greater-manchester" httpResponseStatus="Permanent" /></system.webServer></location>
   <location path="westmidlands"><system.webServer><httpRedirect enabled="true" destination="/west-midlands" httpResponseStatus="Permanent" /></system.webServer></location>
+  <location path="wm"><system.webServer><httpRedirect enabled="true" destination="/west-midlands" httpResponseStatus="Permanent" /></system.webServer></location>
   <location path="gm/asks"><system.webServer><httpRedirect enabled="true" destination="/greater-manchester/donate-needed-items" httpResponseStatus="Permanent" /></system.webServer></location>
   <location path="gm/volunteer"><system.webServer><httpRedirect enabled="true" destination="/greater-manchester/volunteer" httpResponseStatus="Permanent" /></system.webServer></location>
   <location path="give-help/partnership"><system.webServer><httpRedirect enabled="true" destination="/give-help/business-support/" httpResponseStatus="Permanent" /></system.webServer></location>
