--- a/package.json
+++ b/package.json
@@ -97,10 +97,6 @@
       "es2015"
     ]
   },
-  "scripts": {
-    "snyk-protect": "snyk protect",
-    "prepublish": "npm run snyk-protect",
-    "prepare": "npm run snyk-protect"
-  },
+  "scripts": {},
   "snyk": true
 }
