--- a/package.json
+++ b/package.json
@@ -23,25 +23,25 @@
     "babel-polyfill": "^6.22.0",
     "babel-preset-es2015": "6.18.0",
     "babel-register": "6.18.0",
-    "browser-sync": "2.18.5",
+    "browser-sync": "^3.0.1",
     "critical": "1.2.0",
     "css-mqpacker": "5.0.1",
     "cssnano": "3.9.1",
     "del": "2.2.2",
-    "gulp": "^3.9.1",
-    "gulp-debug": "3.0.0",
-    "gulp-htmlmin": "3.0.0",
-    "gulp-if": "2.0.2",
-    "gulp-imagemin": "3.1.1",
+    "gulp": "^4.0.2",
+    "gulp-debug": "^4.0.0",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-if": "^3.0.0",
+    "gulp-imagemin": "^7.1.0",
     "gulp-jasmine": "2.4.2",
-    "gulp-json-editor": "^2.2.1",
-    "gulp-postcss": "6.2.0",
-    "gulp-replace": "^0.5.4",
-    "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "1.9.1",
-    "gulp-standard": "8.0.3",
+    "gulp-json-editor": "^2.6.0",
+    "gulp-postcss": "^10.0.0",
+    "gulp-replace": "^1.1.4",
+    "gulp-sass": "^5.0.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-standard": "^14.0.0",
     "gulp-streamify": "^1.0.2",
-    "gulp-svg-sprite": "1.3.6",
+    "gulp-svg-sprite": "^2.0.3",
     "gulp-util": "3.0.8",
     "handlebars": "4.0.6",
     "imagemin-pngquant": "5.0.0",
@@ -55,17 +55,16 @@
     "metalsmith-mapsite": "1.0.4",
     "metalsmith-metadata-directory": "1.0.0",
     "metalsmith-register-helpers": "0.2.0",
-    "postcss-pxtorem": "3.3.1",
-    "postcss-reporter": "3.0.0",
-    "postcss-scss": "0.4.0",
-    "run-sequence": "1.2.2",
+    "postcss-pxtorem": "^6.1.0",
+    "postcss-reporter": "^7.1.0",
+    "postcss-scss": "^4.0.9",
     "sass-mq": "3.3.2",
     "sinon": "1.17.6",
-    "striptags": "^3.1.1",
+    "striptags": "^3.2.0",
     "stylelint": "7.7.0",
     "stylelint-config-standard": "15.0.1",
     "susy": "2.2.14",
-    "vinyl-source-stream": "^1.1.0",
+    "vinyl-source-stream": "^2.0.0",
     "webpack": "1.14.0",
     "yargs": "6.5.0"
   },
@@ -76,18 +75,21 @@
     "delegate": "^3.2.0",
     "fastclick": "1.0.6",
     "geolib": "2.0.22",
+    "gulp-cli": "^2.3.0",
+    "gulp4-run-sequence": "^1.0.2",
     "hogan.js": "3.0.2",
     "holderjs": "2.9.4",
     "htmlencode": "0.0.4",
     "json-loader": "^0.5.7",
-    "knockout": "3.5.0-rc",
-    "knockout.validation": "2.0.3",
-    "list.fuzzysearch.js": "github:javve/list.fuzzysearch.js#v0.1.0",
+    "knockout": "^3.5.1",
+    "knockout.validation": "^2.0.4",
     "list.js": "1.3.0",
     "marked": "0.6.2",
     "moment": "2.19.3",
+    "postcss": "^8.4.35",
     "q": "1.4.1",
-    "snyk": "^1.174.0",
+    "request": "^2.88.2",
+    "sass": "^1.71.1",
     "spin.js": "2.3.2",
     "svg4everybody": "2.1.4",
     "wpapi": "^1.1.2"
