--- a/package.json
+++ b/package.json
@@ -13,21 +13,21 @@
     "url": "https://github.com/StreetSupport/streetsupport-web/issues"
   },
   "engines": {
-    "node": ">= 4"
+    "node": ">= 12"
   },
   "devDependencies": {
-    "autoprefixer": "6.6.0",
-    "babel-core": "6.21.0",
-    "babel-eslint": "7.1.1",
-    "babel-loader": "6.2.10",
-    "babel-polyfill": "^6.22.0",
-    "babel-preset-es2015": "6.18.0",
-    "babel-register": "6.18.0",
+    "autoprefixer": "^10.4.18",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^6.4.1",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.26.0",
     "browser-sync": "^3.0.1",
-    "critical": "1.2.0",
-    "css-mqpacker": "5.0.1",
-    "cssnano": "3.9.1",
-    "del": "2.2.2",
+    "critical": "^4.0.1",
+    "css-mqpacker": "^7.0.0",
+    "cssnano": "^6.0.5",
+    "del": "^6.1.1",
     "gulp": "^4.0.2",
     "gulp-debug": "^4.0.0",
     "gulp-htmlmin": "^5.0.1",
@@ -43,55 +43,55 @@
     "gulp-streamify": "^1.0.2",
     "gulp-svg-sprite": "^2.0.3",
     "gulp-util": "3.0.8",
-    "handlebars": "4.0.6",
-    "imagemin-pngquant": "5.0.0",
+    "handlebars": "^4.7.8",
+    "imagemin-pngquant": "^9.0.2",
     "imports-loader": "0.7.0",
-    "jasmine": "2.5.2",
-    "metalsmith": "2.3.0",
-    "metalsmith-drafts": "0.0.1",
-    "metalsmith-ignore": "^0.1.2",
-    "metalsmith-in-place": "1.4.4",
-    "metalsmith-layouts": "1.7.0",
-    "metalsmith-mapsite": "1.0.4",
+    "jasmine": "^5.1.0",
+    "metalsmith": "^2.6.3",
+    "metalsmith-drafts": "^1.0.0",
+    "metalsmith-ignore": "^1.0.0",
+    "metalsmith-in-place": "^1.4.4",
+    "metalsmith-layouts": "^1.8.1",
+    "metalsmith-mapsite": "^1.0.6",
     "metalsmith-metadata-directory": "1.0.0",
-    "metalsmith-register-helpers": "0.2.0",
+    "metalsmith-register-helpers": "^0.4.1",
     "postcss-pxtorem": "^6.1.0",
     "postcss-reporter": "^7.1.0",
     "postcss-scss": "^4.0.9",
-    "sass-mq": "3.3.2",
-    "sinon": "1.17.6",
+    "sass-mq": "^6.0.0",
+    "sinon": "^1.17.7",
     "striptags": "^3.2.0",
-    "stylelint": "7.7.0",
-    "stylelint-config-standard": "15.0.1",
-    "susy": "2.2.14",
+    "stylelint": "^15.11.0",
+    "stylelint-config-standard": "^34.0.0",
+    "susy": "^2.2.14",
     "vinyl-source-stream": "^2.0.0",
     "webpack": "1.14.0",
-    "yargs": "6.5.0"
+    "yargs": "^17.7.2"
   },
   "dependencies": {
-    "awesomplete": "1.1.1",
+    "awesomplete": "^1.1.5",
     "classlist.js": "1.1.20150312",
     "cookie-cutter": "^0.2.0",
     "delegate": "^3.2.0",
     "fastclick": "1.0.6",
-    "geolib": "2.0.22",
+    "geolib": "^2.0.24",
     "gulp-cli": "^2.3.0",
     "gulp4-run-sequence": "^1.0.2",
     "hogan.js": "3.0.2",
-    "holderjs": "2.9.4",
+    "holderjs": "^2.9.9",
     "htmlencode": "0.0.4",
     "json-loader": "^0.5.7",
     "knockout": "^3.5.1",
     "knockout.validation": "^2.0.4",
-    "list.js": "1.3.0",
-    "marked": "0.6.2",
-    "moment": "2.19.3",
+    "list.js": "^2.3.1",
+    "marked": "^0.6.3",
+    "moment": "^2.30.1",
     "postcss": "^8.4.35",
-    "q": "1.4.1",
+    "q": "^1.5.1",
     "request": "^2.88.2",
     "sass": "^1.71.1",
-    "spin.js": "2.3.2",
-    "svg4everybody": "2.1.4",
+    "spin.js": "^2.3.2",
+    "svg4everybody": "^2.1.9",
     "wpapi": "^1.1.2"
   },
   "babel": {
@@ -99,6 +99,9 @@
       "es2015"
     ]
   },
+  "browserslist": [
+    "defaults"
+  ],
   "scripts": {},
   "snyk": true
 }
