Update snyk version

--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "q": "^1.5.1",
     "request": "^2.88.2",
     "sass": "^1.71.1",
+    "snyk": "^1.1285.0",
     "spin.js": "^2.3.2",
     "svg4everybody": "^2.1.9",
     "wpapi": "^1.1.2"
