tests pledge form link

--- a/src/files/Web.config
+++ b/src/files/Web.config
@@ -39,6 +39,8 @@
   <location path="gm/volunteer"><system.webServer><httpRedirect enabled="true" destination="/greater-manchester/volunteer" httpResponseStatus="Permanent" /></system.webServer></location>
   <location path="give-help/partnership"><system.webServer><httpRedirect enabled="true" destination="/give-help/business-support/" httpResponseStatus="Permanent" /></system.webServer></location>
   <location path="manchester/bigchangemcr"><system.webServer><httpRedirect enabled="true" destination="/manchester/realchangemcr/" httpResponseStatus="Permanent" /></system.webServer></location>
+  <location path="derbyshire/pledge"><system.webServer><httpRedirect enabled="true" destination="https://google.com" httpResponseStatus="Permanent" /></system.webServer></location>
+
 
   <system.webServer>
     <security>
