--- a/src/files/Web.config
+++ b/src/files/Web.config
@@ -39,7 +39,7 @@
   <location path="gm/volunteer"><system.webServer><httpRedirect enabled="true" destination="/greater-manchester/volunteer" httpResponseStatus="Permanent" /></system.webServer></location>
   <location path="give-help/partnership"><system.webServer><httpRedirect enabled="true" destination="/give-help/business-support/" httpResponseStatus="Permanent" /></system.webServer></location>
   <location path="manchester/bigchangemcr"><system.webServer><httpRedirect enabled="true" destination="/manchester/realchangemcr/" httpResponseStatus="Permanent" /></system.webServer></location>
-  <location path="derbyshire/pledge"><system.webServer><httpRedirect enabled="true" destination="https://google.com" httpResponseStatus="Permanent" /></system.webServer></location>
+  <location path="derbyshire/pledge"><system.webServer><httpRedirect enabled="true" destination="https://docs.google.com/forms/d/e/1FAIpQLSdjm16Dc9FSyr4v5o3c0kuJWUn93R07A4B-TKg9KD2U-ioz6g/viewform?vc=0&c=0&w=1&flr=0&usp=mail_form_link" httpResponseStatus="Permanent" /></system.webServer></location>
 
 
   <system.webServer>
